--- a/templates/dockerfile.erb
+++ b/templates/dockerfile.erb
@@ -1,5 +1,5 @@
 <% self.filename = 'Dockerfile' -%>
-<% self.executable = true -%>
+<% self.executable = false -%>
 FROM ubuntu:12.04
 MAINTAINER <%= maintainer %>
 
