Adding comments to the templates [ci skip]

--- a/templates/dockerfile.erb
+++ b/templates/dockerfile.erb
@@ -1,5 +1,6 @@
 <% self.filename = 'Dockerfile' -%>
 <% self.executable = false -%>
+# See http://docs.docker.io/en/latest/use/builder/ for more info
 FROM <%= from %>
 MAINTAINER <%= maintainer %>
 
