--- a/templates/dockerfile.erb
+++ b/templates/dockerfile.erb
@@ -1,14 +1,15 @@
 <% self.filename = 'Dockerfile' -%>
 <% self.executable = false -%>
-# See http://docs.docker.io/en/latest/use/builder/ for more info
 FROM <%= from %>
 MAINTAINER <%= maintainer %>
+
+# See http://docs.docker.io/en/latest/use/builder/ for more info
 
 RUN apt-get update -yq
 
 ADD ./.run /docker/run
 
-EXPOSE 80 443
-VOLUME["/net", "/bridge"]
+EXPOSE 22 80 443
+VOLUME ["/net", "/bridge"]
 
-CMD["/docker/run/bridge"]
+CMD ["/docker/run/bridge"]
